fixed overlap issue

--- a/showcase-site/src/Dropdown.css
+++ b/showcase-site/src/Dropdown.css
@@ -1,8 +1,10 @@
 .dropdown-container {
     position: relative;
     width: 100%;
-    height: 50px;
-    background-color: #444;
+    height: 20px;
+    background-color: #265;
+    position: fixed;
+    z-index:1;
   }
   
   .dropdown {
@@ -10,7 +12,7 @@
     color: white;
     padding: 20px;
     position: absolute;
-    top: -100%;
+    top: 0%; // offset from hover bar 
     left: 0;
     width: 100%;
     visibility: hidden;
@@ -19,6 +21,7 @@
   }
   
   .dropdown.show {
+    background-color: #333;
     visibility: visible;
     opacity: 1;
     transition: opacity 0.3s ease-in-out;
